--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -35,7 +35,8 @@
           <span class="opacity-60 hidden sm:inline">|</span>
           <a href="/movimentacao/"  class="hover:text-green-200 transition">Movimentação</a>
           <span class="opacity-60 hidden sm:inline">|</span>
-          <a href="/admin"          class="hover:text-red-300 transition font-semibold">Sair</a>
+          <a href="/admin"          class="hover:text-red-300 transition font-semibold">Dashboard</a>
+          
         </nav>
 
       </div>
